Correct widths in fp-media block on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2965,7 +2965,7 @@ figcaption a:visited {
 }
 
 .region-fp-media .block:last-child {
-  flex-basis: 40%;
+  flex-basis: 300px;
   -webkit-box-flex: 1;
           flex-grow: 1;
 }
