--- a/sass/regions/regions.scss
+++ b/sass/regions/regions.scss
@@ -79,7 +79,7 @@
       flex-basis: 300px;
     }
     &:last-child {
-      flex-basis: 40%;
+      flex-basis: 300px;
       flex-grow: 1;
       @media (min-width: 768px) {
         flex-grow: 0;
